--- a/docs/VnVReport/VnVReport.tex
+++ b/docs/VnVReport/VnVReport.tex
@@ -69,10 +69,73 @@ This document ...
 \section{Functional Requirements Evaluation}
 
 \section{Nonfunctional Requirements Evaluation}
+\subsection{Look and Feel}
+\subsubsection{Summary of Tests}
+\begin{center}
+    \begin{tabular}{|c|c|l|}
+        \hline
+        \textbf{Test ID} & \textbf{Status} & \textbf{Notes}\\
+        \hline
+        T-LF0 & Pass & \\
+        T-LF1 & Pass & \\
+        T-LF2 & Pass & \\
+        \hline
+    \end{tabular}
+\end{center}
+    
+\begin{enumerate}
+    \item{T-LF0: Responsive Layout Validation\\}
+        
+    \textbf{Initial State}: Users access the application on devices with screen resolutions ranging from 1024$\times$768 pixels to 1920$\times$1080 pixels.
+    
+    \textbf{Input/Condition}: The application is displayed on various screen sizes within the specified range to verify adaptability and layout consistency.
 
+    \textbf{Expected Result}: All elements are displayed on the screen, regardless of dimensions.
+
+    \textbf{Result} Pass
+
+    \item{T-LF1: Interactive Elements Feedback Validation\\}
+    
+    \textbf{Initial State}: Interactive elements (e.g., buttons, links) are present within the application interface.
+    
+    \textbf{Input/Condition}: Users interact with various interactive elements to verify that visual feedback is provided appropriately.
+    
+    \textbf{Expected Result}: Each interactive element provides feedback when hovered over and clicked on.
+
+    \textbf{Result} Pass
+    
+    \item{T-LF2: Unified Visual Design Validation\\}
+    
+    
+    \textbf{Initial State}: The application interface displays all components (buttons, menus, text fields, images, etc.) with the unified visual design specifications.
+    
+    \textbf{Input/Condition}: Users or testers navigate through the application to assess the consistency of font type, sizing, color, and background tones across all components.
+    
+    \textbf{Expected Result}: All elements follow consistent style
+
+    \textbf{Result} Pass
+
+    \textbf{Comments} Replacing Label Studio with our own framework was necessary to pass this test.
+    
+    \end{enumerate}
+
+    \subsubsection{Analysis}
+    All three of the Look and Feel tests pass. These tests were designed to provide complete coverage of the Look and Feel requirements, and therefore we believe them to be covered.
 \subsection{Usability}
-		
+		TODO: include link to usability report
+        TODO: include brief summary of usability report
+
 \subsection{Performance}
+\subsection{Operational and Environmental}
+ TODO
+\subsection{Maintainability and Support}
+TODO
+\subsection{Security}
+TODO
+\subsection{Cultural}
+\subsection{Compliance}
+\subsection{User Documentation and Training}
+
 
 \subsection{etc.}
 	
