--- a/docs/VnVReport/VnVReport.tex
+++ b/docs/VnVReport/VnVReport.tex
@@ -151,131 +151,130 @@ This document ...
     \item{T-OE0: Energy Efficiency Validation\\}
     
     
-    Initial State: The system is running on cloud infrastructure with existing server management configurations.
+    \textbf{Initial State}: The system is running on cloud infrastructure with existing server management configurations.
     
-    Input/Condition: Implement energy-efficient practices in cloud usage and server management, then measure energy consumption before and after optimization.
+    \textbf{Input/Condition}: Implement energy-efficient practices in cloud usage and server management, then measure energy consumption before and after optimization.
     
-    Expected Result: A statistically significant decrease in energy usage with 5\% sensitivity.
+    \textbf{Expected Result}: A statistically significant decrease in energy usage with 5\% sensitivity.
 
-    Result: Test not completed
+    \textbf{Result}: Test not completed
 
-    Comments: Requirement is out of scope
+    \textbf{Comments}: Requirement is out of scope
     
     
     \item{T-OE1: API and Data Format Integration Validation\\}
     
     
-    Initial State: The system is configured with API access credentials for at least two major satellite data providers.
+    \textbf{Initial State}: The system is configured with API access credentials for at least two major satellite data providers.
     
-    Input/Condition: The system attempts to automatically acquire and integrate satellite images from the specified providers using their standardized APIs and data formats.
+    \textbf{Input/Condition}: The system attempts to automatically acquire and integrate satellite images from the specified providers using their standardized APIs and data formats.
     
-    Expected Result: System obtains result from API provider.
+    \textbf{Expected Result}: System obtains result from API provider.
 
-    Result: Fail
+    \textbf{Result}: Fail
 
-    Comments: Not yet implemented
+    \textbf{Comments}: Not yet implemented
     
     
     \item{T-OE2: Payment Processor Integration Validation\\}
     
     
-    Initial State: The system is configured with API access credentials for reliable and secure payment processors (e.g., Stripe, PayPal).
+    \textbf{Initial State}: The system is configured with API access credentials for reliable and secure payment processors (e.g., Stripe, PayPal).
     
-    Input/Condition: Users and clients perform financial transactions through the integrated payment gateways.
+    \textbf{Input/Condition}: Users and clients perform financial transactions through the integrated payment gateways.
     
-    Expected Result: System successfully processes payment
+    \textbf{Expected Result}: System successfully processes payment
 
-    Result: Test not completed
+    \textbf{Result}: Test not completed
 
-    Comments: Requirement is out of scope
+    \textbf{Comments}: Requirement is out of scope
     
     \item{T-OE3: Multiple Currency Support Validation\\}
     
     
-    Initial State: The system is configured to support multiple currencies, including USD, EUR, GBP, and INR.
+    \textbf{Initial State}: The system is configured to support multiple currencies, including USD, EUR, GBP, and INR.
     
-    Input/Condition: Users perform transactions in each supported currency to verify correct processing.
+    \textbf{Input/Condition}: Users perform transactions in each supported currency to verify correct processing.
     
-    Expected Result: System successfully processes payment with all valid currencies
+    \textbf{Expected Result}: System successfully processes payment with all valid currencies
 
-    Result: Test not completed
+    \textbf{Result}: Test not completed
 
-    Comments: Requirement is out of scope
+    \textbf{Comments}: Requirement is out of scope
     
     \item{T-OE4: Machine Learning Framework Compatibility Validation\\}
     
     
-    Initial State: The system is configured with machine learning frameworks such as TensorFlow, PyTorch, and scikit-learn installed.
+    \textbf{Initial State}: The system is configured with machine learning frameworks such as TensorFlow, PyTorch, and scikit-learn installed.
     
-    Input/Condition: Users train and deploy models using each framework to verify compatibility.
+    \textbf{Input/Condition}: Users train and deploy models using each framework to verify compatibility.
     
-    Expected Result: System successfully deploys models to each framework
+    \textbf{Expected Result}: System successfully deploys models to each framework
 
-    Result: Fail
+    \textbf{Result}: Fail
 
-    Comments: Not yet implemented
+    \textbf{Comments}: Not yet implemented
     
     \item{T-OE5: Data Pipeline Efficiency Validation\\}
     
-    Initial State: The system has established data pipelines for transferring labeled datasets between the platform and ML models.
+    \textbf{Initial State}: The system has established data pipelines for transferring labeled datasets between the platform and ML models.
     
-    Input/Condition: Large labeled datasets (e.g., 10,000 images) are transferred through the data pipelines.
+    \textbf{Input/Condition}: Large labeled datasets (e.g., 10,000 images) are transferred through the data pipelines.
     
-    Expected Result: Data pipeline can support large datasets
+    \textbf{Expected Result}: Data pipeline can support large datasets
 
-    Result: Fail
+    \textbf{Result}: Fail
 
-    Comments: Not yet implemented
+    \textbf{Comments}: Not yet implemented
     
     
     
     \item{T-OE6: Web Browser Accessibility Validation\\}
     
-    Type: Manual, Usability
-    
-    Initial State: Users have access to the platform's web URL.
-    
-    Input/Condition: Users attempt to access and use the platform via various supported web browsers without installing any software.
-    
-    Expected Results: Users are able to complete all key actions
 
-    Results: Pass
+    \textbf{Initial State}: Users have access to the platform's web URL.
+    
+    \textbf{Input/Condition}: Users attempt to access and use the platform via various supported web browsers without installing any software.
+    
+    \textbf{Expected Results}: Users are able to complete all key actions
+
+    \textbf{Results}: Pass
     
     
     \item{T-OE7: Road Map Consistency\\}
                         
-    Initial State: Application has a release road map that is publicly accessible.
+    \textbf{Initial State}: Application has a release road map that is publicly accessible.
                         
-    Input/Condition: Team member conducts a review.
+    \textbf{Input/Condition}: Team member conducts a review.
                         
-    Output/Result: At least \hyperref[MIN_ON_TIME_MILESTONE]{MIN\_ON\_TIME\_MILESTONE}\% of the listed milestones have been met on time.
+    \textbf{Expected Results}: At least \hyperref[MIN_ON_TIME_MILESTONE]{MIN\_ON\_TIME\_MILESTONE}\% of the listed milestones have been met on time.
                         
-    Result: Pass
+    \textbf{Result}: Pass
 
     
     \item{Beta Testing: T-OE8\\}
     
                         
-    Initial State: Beta version of application is deployed and accessible
+    \textbf{Initial State}: Beta version of application is deployed and accessible
                         
-    Input/Condition: At least \hyperref[BETA_TESTERS]{BETA\_TESTERS} beta testers are provided access to use the application.
+    \textbf{Input/Condition}: At least \hyperref[BETA_TESTERS]{BETA\_TESTERS} beta testers are provided access to use the application.
                         
-    Output/Result: Feedback on any bugs, navigation issues, or aesthetic problems is provided. Less than \hyperref[MAX_BUGS_FOUND]{MAX\_BUGS\_FOUND} bugs are found.
+    \textbf{Expected Results}: Feedback on any bugs, navigation issues, or aesthetic problems is provided. Less than \hyperref[MAX_BUGS_FOUND]{MAX\_BUGS\_FOUND} bugs are found.
                         
-    Result: Pass
+    \textbf{Result}: Pass
 
-    Comments: Preliminary usability testing has been performed. See usability testing for details.
+    \textbf{Comments}: Preliminary usability testing has been performed. See usability testing for details.
     
     \item{Regression Testing: T-OE9\\}
     
                         
-    Initial State: Application is deployed.
+    \textbf{Initial State}: Application is deployed.
                         
-    Input/Condition: Run regression test suite, consisting of unit tests.
+    \textbf{Input/Condition}: Run regression test suite, consisting of unit tests.
                         
-    Output/Result: All regression tests are passed.
+    \textbf{Expected Results}: All regression tests are passed.
                         
-    Result: Pass
+    \textbf{Result}: Pass
 
     
     \end{enumerate}
@@ -285,7 +284,34 @@ When conducting the validation of these requirements, we have identified a weakn
 each one is due to a lack of focus from the development team. Now that there is a core structure in the application, we are able to begin addressing additional features, such as high performance data pipelines. 
 
 \subsection{Maintainability and Support}
-TODO
+\subsubsection{Summary of Tests}
+\begin{center}
+    \begin{tabular}{|c|c|l|}
+        \hline
+        \textbf{Test ID} & \textbf{Status} & \textbf{Notes}\\
+        \hline
+        T-MS0 & N/A & Test not yet attempted due to project being in early development.\\
+        \hline
+    \end{tabular}
+\end{center}
+\begin{enumerate}
+
+\item{T-MS0: Ease of Change\\}
+
+					
+\textbf{Initial State}: Application's source repository contains complete documentation.
+					
+\textbf{Input/Condition}: Competent software developer who has not previously worked on the app reviews documentation and attempts to perform tasks.
+					
+\textbf{Expected Results}: The developer can easily make a minor update to a specified part of the application.
+	
+\textbf{Results}: Test not completed
+
+\textbf{Comments}: Test not yet attempted due to project being in early development.
+\end{enumerate}
+\subsubsection{Analysis}
+Although this test has not been attempted, the development team has been careful to write code that will be maintainable and match the design document description. This will ensure when this test is attempted, it will be successful.
+
 \subsection{Security}
 TODO
 \subsection{Cultural}
