--- a/docs/VnVReport/VnVReport.tex
+++ b/docs/VnVReport/VnVReport.tex
@@ -313,13 +313,166 @@ each one is due to a lack of focus from the development team. Now that there is 
 Although this test has not been attempted, the development team has been careful to write code that will be maintainable and match the design document description. This will ensure when this test is attempted, it will be successful.
 
 \subsection{Security}
-TODO
+\subsubsection{Summary of Tests}
+\begin{center}
+    \begin{tabular}{|c|c|l|}
+        \hline
+        \textbf{Test ID} & \textbf{Status} & \textbf{Notes}\\
+        \hline
+        T-SE0 & Pass & \\
+        T-SE1 & Pass & \\ 
+        T-SE2 & Pass & \\ 
+        T-SE3 & Pass & \\ 
+        T-SE4 & Fail & Some passwords incorrectly fail\\ 
+        T-SE5 & Pass & \\ 
+        T-SE6 & Fail & Not yet implemented\\ 
+        T-SE7 & Fail & Not yet implemented\\ 
+        T-SE8 & N/A & Requirement is out of scope\\ 
+        T-SE9 & Pass & \\ 
+        \hline
+    \end{tabular}
+\end{center}
+
+
+\begin{enumerate}
+
+\item{T-SE0: Logged Out Permissions\\}
+					
+Initial State: Application is deployed.
+					
+Input/Condition: Tester who is not signed in tries to access application paths for project creation and image labeling (Ex. /projects or /label).
+					
+Output/Result: The tester is denied access to these paths and is told to sign in.
+					
+Result: Pass
+
+\item{T-SE1: Labeler Permissions\\}
+
+					
+Initial State: Application is deployed.
+					
+Input/Condition: Tester who is signed in as a labeler tries to access application paths for project creation.
+					
+Output/Result: The tester is denied access to these paths. However, the tester has access to paths related to image labeling.
+					
+Result: Pass
+
+\item{T-SE2: Invalid Email Format\\}
+
+					
+Initial State: Front-end registration page is created and integrated with the database.
+					
+Input/Condition: Email with invalid format, such as an empty string or a string missing '@', is entered.
+					
+Output/Result: Application rejects email and tells the user that the email format is wrong.
+					
+Result: Pass
+
+\item{T-SE3: Duplicate Email\\}
+
+					
+Initial State: Front-end registration page is created and integrated with the database.
+					
+Input/Condition: Email that is already in database is entered.
+					
+Output/Result: Application rejects email and tells the user that the email is in use.
+					
+Result: Pass
+
+\item{T-SE4: Invalid Password Format\\}
+
+					
+Initial State: Front-end registration page is created and integrated with the database.
+					
+Input/Condition: Password with invalid format, such as an empty string or a string with no numbers, is entered.
+					
+Output/Result: Application rejects password and tells the user what requirements they have not met.
+					
+Result: Fail
+
+Comments: Some passwords which should pass, such as `Password123\#' fail.
+
+\item{T-SE5: System Error\\}
+
+
+					
+Initial State: Application is deployed.
+					
+Input/Condition: Purposely invoke a system failure, and attempt to perform an action such as a label submission.
+					
+Output/Result: Application provides an error message on the user interface. The database has not changed in anyway.
+					
+Result: Pass
+
+
+
+\item{T-SE6: Duplicate Entries\\}
+
+					
+Initial State: Database is deployed.
+					
+Input/Condition: Duplicate database entry is inserted into the database.
+					
+Output/Result: Database has only one of the inputted entry and the duplicate has been removed.
+					
+Result: fail
+
+Comments: Not yet implemented
+
+
+\item{T-SE7: Encrypted User Data\\}
+
+					
+Initial State: Application is deployed.
+					
+Input/Condition: Tester registers an account.
+					
+Output/Result: All sensitive user data that is stored in the database is encrypted.
+					
+Result: Fail
+
+Comments: Not yet implemented
+
+
+\item{T-SE8: Encrypted Payments\\}
+
+Type: Manual, Dynamic
+					
+Initial State: Application is deployed.
+					
+Input/Condition: Tester enters sample payment details to pay for a labeling project that has been created.
+					
+Output/Result: These details are encrypted and can not be read through packet analyzers. The amount in the request can not be modified by an adversary.
+					
+Result: Test not completed
+
+Comments: Requirement is out of scope
+
+
+\item{T-SE9: SQL Injection\\}
+
+Type: Manual, Dynamic
+					
+Initial State: Application is deployed.
+					
+Input/Condition: A malicious SQL statement is entered into a text field.
+					
+Output/Result: The system raises an error telling the user that it is invalid.
+					
+Result: Pass
+
+\end{enumerate}
+
+\subsubsection{Analysis}
+This application has been designed for security, and that is clear from the tests results. Six of the nine security tests pass, with partial passes for two of the failing tests. For the encryption test (T-SE7), user data is not yet encrypted, but passwords are. For the password validation test (T-SE4), 
+all weak passwords are blocked, but some strong passwords are as well. The development team will address this issue in coming releases, but we are glad to know that if anything, we are not overly permissive. The requirement related to the remaining failed test (T-SE6), has been deemed `Medium' priority, and may be addressed in a future release.
+
+
 \subsection{Cultural}
 \subsection{Compliance}
 \subsection{User Documentation and Training}
 
 
-\subsection{etc.}
 	
 \section{Comparison to Existing Implementation}	
 
