Added link to usability report

--- a/docs/VnVReport/VnVReport.tex
+++ b/docs/VnVReport/VnVReport.tex
@@ -122,8 +122,7 @@ This document ...
     \subsubsection{Analysis}
     All three of the Look and Feel tests pass. These tests were designed to provide complete coverage of the Look and Feel requirements, and therefore we believe them to be covered.
 \subsection{Usability}
-		TODO: include link to usability report
-        TODO: include brief summary of usability report
+	Please see usability report, found \href{https://github.com/OKKM-insights/OKKM.insights/blob/main/docs/Extras/UsabilityReport/UsabilityReport.pdf}{here}
 
 \subsection{Performance}
 \subsection{Operational and Environmental}
