--- a/docs/VnVReport/VnVReport.tex
+++ b/docs/VnVReport/VnVReport.tex
@@ -414,7 +414,7 @@ Input/Condition: Duplicate database entry is inserted into the database.
 					
 Output/Result: Database has only one of the inputted entry and the duplicate has been removed.
 					
-Result: fail
+Result: Fail
 
 Comments: Not yet implemented
 
